--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,8 @@ unittest_xml_reporting==1.12.0
 # nfv-toscaparser>=0.5.0
 
 # for swagger
-drf-yasg==1.16.0
+drf-yasg==1.14.0
+ruamel.yaml==0.15.97
 
 # for the validation feature
 flex>=6.11.1
