Modify access rules

--- a/project.config
+++ b/project.config
@@ -2,3 +2,5 @@
 	inheritFrom = All-Projects
 [project]
 	description = NS lifecycle management
+[access "refs/*"]
+	owner = group ldap/onap-gerrit-vfc-nfvo-lcm-committers
