--- a/project.config
+++ b/project.config
@@ -4,3 +4,4 @@
 	description = NS lifecycle management
 [access "refs/*"]
 	owner = group ldap/onap-gerrit-vfc-nfvo-lcm-committers
+	read = group GitHub Replication
