Fix bug for delete subscription in ns termination
Change-Id: I4a0b90c6947a99a120fa6aa3a28482cf4fc981e2
Issue-ID: VFC-1594
Signed-off-by: hongyuzhao <zhao.hongyu@zte.com.cn>

--- a/tox.ini
+++ b/tox.ini
@@ -23,5 +23,5 @@ commands =
   {[testenv]commands}
 
 [testenv:cov]
-deps = coverage
+deps = coverage==4.2
 commands = coverage xml --omit="*test_*,*__init__.py,*site-packages*"
