--- a/INFO.yaml
+++ b/INFO.yaml
@@ -22,26 +22,14 @@ realtime_discussion: ''
 meetings:
     - type: 'zoom'
       agenda: 'https://wiki.onap.org/pages/viewpage.action?pageId=6590138'
-      url: 'https://wiki.onap.org/display/DW/Virtual+Function+Controller+Project'
+      url: 'https://wiki.onap.org/pages/viewpage.action?pageId=6590138'
       server: 'n/a'
       channel: 'n/a'
       repeats: 'weekly'
       time: '09:00 UTC'
 repositories:
-    - 'vfc-gvnfm-vnflcm'
-    - 'vfc-gvnfm-vnfmgr'
-    - 'vfc-gvnfm-vnfres'
-    - 'vfc-nfvo-catalog'
-    - 'vfc-nfvo-db'
-    - 'vfc-nfvo-driver-ems'
-    - 'vfc-nfvo-driver-sfc'
-    - 'vfc-nfvo-driver-vnfm-gvnfm'
-    - 'vfc-nfvo-driver-vnfm-svnfm'
-    - 'vfc-nfvo-lcm'
-    - 'vfc-nfvo-multivimproxy'
-    - 'vfc-nfvo-resmanagement'
-    - 'vfc-nfvo-wfengine'
-    - 'vfc-oom'
+    - 'vfc/nfvo/lcm'
+
 committers:
     - <<: *onap_releng_ptl
     - name: 'Anatoly Andrianov'
@@ -144,11 +132,21 @@ committers:
       company: 'Intel'
       id: 'Ruoyu'
       timezone: 'Asia/ShangHai'
+    - name: 'YuanHong Deng'
+      email: 'dengyuanhong@chinamobile.com'
+      company: 'China Mobile'
+      id: 'dengyh'
+      timezone: 'Asia/ShangHai'
+    - name: 'HongYu Zhao'
+      email: 'zhao.hongyu@zte.com.cn'
+      company: 'ZTE'
+      id: 'hongyuzhao'
+      timezone: 'Asia/ShangHai'
 
 tsc:
     approval: 'https://lists.onap.org/pipermail/onap-tsc'
     changes:
         - type: 'Addition'
-          name: 'Denes Nemeth'
-          name: 'Haibin Huang'
+        - name: 'Denes Nemeth'
+        - name: 'Haibin Huang'
           link: 'https://lists.onap.org/g/ONAP-TSC/message/3269'
