Add VFC committer info
Change-Id: I7e48d021b3fcea604163440681ae3c8d5bdc92be
Issue-ID: VFC-1620
Signed-off-by: yangyan <yangyanyj@chinamobile.com>

--- a/INFO.yaml
+++ b/INFO.yaml
@@ -22,7 +22,7 @@ realtime_discussion: ''
 meetings:
     - type: 'zoom'
       agenda: 'https://wiki.onap.org/pages/viewpage.action?pageId=6590138'
-      url: 'https://wiki.onap.org/display/DW/Virtual+Function+Controller+Project'
+      url: 'https://wiki.onap.org/pages/viewpage.action?pageId=6590138'
       server: 'n/a'
       channel: 'n/a'
       repeats: 'weekly'
@@ -144,11 +144,21 @@ committers:
       company: 'Intel'
       id: 'Ruoyu'
       timezone: 'Asia/ShangHai'
+    - name: 'YuanHong Deng'
+      email: 'dengyuanhong@chinamobile.com'
+      company: 'China Mobile'
+      id: 'dengyh'
+      timezone: 'Asia/ShangHai'
+    - name: 'HongYu Zhao'
+      email: 'zhao.hongyu@zte.com.cn'
+      company: 'ZTE'
+      id: 'hongyuzhao'
+      timezone: 'Asia/ShangHai'
 
 tsc:
     approval: 'https://lists.onap.org/pipermail/onap-tsc'
     changes:
         - type: 'Addition'
-          name: 'Denes Nemeth'
-          name: 'Haibin Huang'
+        - name: 'Denes Nemeth'
+        - name: 'Haibin Huang'
           link: 'https://lists.onap.org/g/ONAP-TSC/message/3269'
