Add VFC committer info
Change-Id: I7e48d021b3fcea604163440681ae3c8d5bdc92be
Issue-ID: VFC-1620
Signed-off-by: yangyan <yangyanyj@chinamobile.com>

--- a/INFO.yaml
+++ b/INFO.yaml
@@ -149,6 +149,6 @@ tsc:
     approval: 'https://lists.onap.org/pipermail/onap-tsc'
     changes:
         - type: 'Addition'
-          name: 'Denes Nemeth'
-          name: 'Haibin Huang'
+        - name: 'Denes Nemeth'
+        - name: 'Haibin Huang'
           link: 'https://lists.onap.org/g/ONAP-TSC/message/3269'
