Add VFC committer info
Change-Id: I7e48d021b3fcea604163440681ae3c8d5bdc92be
Issue-ID: VFC-1620
Signed-off-by: yangyan <yangyanyj@chinamobile.com>

--- a/INFO.yaml
+++ b/INFO.yaml
@@ -144,6 +144,16 @@ committers:
       company: 'Intel'
       id: 'Ruoyu'
       timezone: 'Asia/ShangHai'
+    - name: 'YuanHong Deng'
+      email: 'dengyuanhong@chinamobile.com'
+      company: 'China Mobile'
+      id: 'dengyh'
+      timezone: 'Asia/ShangHai'
+    - name: 'HongYu Zhao'
+      email: 'zhao.hongyu@zte.com.cn'
+      company: 'ZTE'
+      id: 'hongyuzhao'
+      timezone: 'Asia/ShangHai'
 
 tsc:
     approval: 'https://lists.onap.org/pipermail/onap-tsc'
