update committer list
Issue-ID: VFC-1701
Change-Id: I95a38f25a935d503bffecb2619ba9d7c43ab4c7a
Signed-off-by: dyh <dengyuanhong@chinamobile.com>

--- a/INFO.yaml
+++ b/INFO.yaml
@@ -3,9 +3,9 @@ project: 'vfc-nfvo-lcm'
 project_creation_date: '2017-06-28'
 lifecycle_state: 'Incubation'
 project_lead: &onap_releng_ptl
-    name: 'Yan Yang'
-    email: 'yangyanyj@chinamobile.com'
-    id: 'yangyan'
+    name: 'Yuanhong Deng'
+    email: 'dengyuanhong@chinamobile.com'
+    id: 'dengyh'
     company: 'China Mobile'
     timezone: 'Asia/Shanghai'
 project_category: ''
@@ -38,25 +38,10 @@ committers:
       company: 'Nokia'
       id: 'caa028'
       timezone: 'America/Chicago'
-    - name: 'Fu Jinhua'
-      email: 'fu.jinhua@zte.com.cn'
-      company: 'ZTE'
-      id: 'fujinhua'
-      timezone: 'Asia/Shanghai'
     - name: 'Victor Gao'
       email: 'victor.gao@huawei.com'
       company: 'Huawei'
       id: 'g310497'
-      timezone: 'Asia/Shanghai'
-    - name: 'han yanan'
-      email: 'hanyanan@raisecom.com'
-      company: 'Raisecom'
-      id: 'hanyanan'
-      timezone: 'Asia/Shanghai'
-    - name: 'lu xin'
-      email: 'luxin7@huawei.com'
-      company: 'Huawei'
-      id: 'l345485'
       timezone: 'Asia/Shanghai'
     - name: 'maopeng zhang'
       email: 'zhang.maopeng1@zte.com.cn'
@@ -68,75 +53,20 @@ committers:
       company: 'Huawei'
       id: 'mkr1481'
       timezone: 'Asia/Kolkata'
-    - name: 'yunlong ying'
-      email: 'ying.yunlong@zte.com.cn'
-      company: 'ZTE'
-      id: 'ying.yunlong'
-      timezone: 'Asia/Shanghai'
-    - name: 'Yog Vashishth'
-      email: 'yog.vashishth@ril.com'
-      company: 'Ril'
-      id: 'yogvashishth'
-      timezone: 'Asia/Kolkata'
     - name: 'Lingli Deng'
       email: 'denglingli@chinamobile.com'
       company: 'China Mobile'
       id: 'denglingli'
       timezone: 'Asia/Shanghai'
-    - name: 'Nagesha Subramanya'
-      email: 'nagesha.subramanya@nokia.com'
-      company: 'Nokia'
-      id: 'hsnagesh'
-      timezone: 'Asia/Kolkata'
-    - name: 'Xinhui Li'
-      email: 'lxinhui@vmware.com'
-      company: 'VMWare'
-      id: 'xinhuili'
-      timezone: 'Asia/Shanghai'
-    - name: 'Guirong Wang'
-      email: 'wangguirong@boco.com.cn'
-      company: 'Boco'
-      id: 'Wang_Guirong'
-      timezone: 'Asia/Shanghai'
-    - name: 'Adityakar Jha'
-      email: 'Adityakar.Jha@ril.com'
-      company: 'Ril'
-      id: 'adityakar.jha'
-      timezone: 'Asia/Kolkata'
-    - name: 'Hu Dong'
-      email: 'donghu@raisecom.com'
-      company: 'Raisecom'
-      id: 'donghu1102'
-      timezone: 'Asia/Shanghai'
-    - name: 'Denes Nemeth'
-      email: 'denes.nemeth@nokia.com'
-      company: 'Nokia'
-      id: 'thelittlemouse'
-      timezone: 'Europe/Budapest'
     - name: 'Haibin Huang'
       email: 'haibin.huang@intel.com'
       company: 'Intel'
       id: 'haibin'
       timezone: 'Asia/Shanghai'
-    - name: 'LiLai'
-      email: 'lai.li@zte.com.cn'
-      company: 'ZTE'
-      id: 'laili'
-      timezone: 'Asia/Nanjing'
-    - name: 'Bharath Thiruveedula'
-      email: 'bharath.thiruveedula@verizon.com'
-      company: 'Verizon'
-      id: 'bharaththiruveedula'
-      timezone: 'Asia/Hyderabad'
-    - name: 'Ruoyu Ying'
-      email: 'ruoyu.ying@intel.com'
-      company: 'Intel'
-      id: 'Ruoyu'
-      timezone: 'Asia/ShangHai'
-    - name: 'Yuanhong Deng'
-      email: 'dengyuanhong@chinamobile.com'
+    - name: 'Yan Yang'
+      email: 'yangyanyj@chinamobile.com'
       company: 'China Mobile'
-      id: 'dengyh'
+      id: 'yangyan'
       timezone: 'Asia/ShangHai'
     - name: 'Hongyu Zhao'
       email: 'zhao.hongyu@zte.com.cn'
@@ -147,9 +77,6 @@ committers:
 tsc:
     approval: 'https://lists.onap.org/pipermail/onap-tsc'
     changes:
-        - type: 'Addition'
-          name: 'Denes Nemeth'
-          link: 'https://lists.onap.org/g/ONAP-TSC/message/3269'
         - type: 'Addition'
           name: 'Haibin Huang'
           link: 'https://lists.onap.org/g/ONAP-TSC/message/3269'
