LDAP to SAML conversion

--- a/project.config
+++ b/project.config
@@ -4,4 +4,5 @@
 	description = NS lifecycle management
 [access "refs/*"]
 	owner = group ldap/onap-gerrit-vfc-nfvo-lcm-committers
+	owner = group saml/onap-gerrit-vfc-nfvo-lcm-committers
 	read = group GitHub Replication
