Don't write information to resmanagement
Change-Id: I9f866be27166b0c6154d9fe1649398f61de2a5de
Issue-ID: VFC-1762
Signed-off-by: dyh <dengyuanhong@chinamobile.com>

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ downloadcache = ~/cache/pip
 
 [flake8]
 ignore = E501,E722
-exclude = ./venv-tox,./.tox
+exclude = ./venv-tox,./.tox,./venv
 max-complexity = 27
 
 [testenv]
