Update document: Installation and User Guide
Change-Id: I25c7fbb328d30633fba93dbd09547b5e3a7758ed
Issue-ID: VFC-1788
Signed-off-by: dyh <dengyuanhong@chinamobile.com>

--- a/docs/tox.ini
+++ b/docs/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 1.6
-envlist = docs,
+envlist = pep8,
 skipsdist = true
 
 [testenv:docs]
@@ -20,3 +20,7 @@ basepython = python3
 commands = echo "Link Checking not enforced"
 #commands = sphinx-build -b linkcheck -d {envtmpdir}/doctrees ./ {toxinidir}/_build/linkcheck
 whitelist_externals = echo
+
+[testenv:pep8]
+deps = flake8
+commands = flake8
