--- a/docs/tox.ini
+++ b/docs/tox.ini
@@ -1,22 +1,12 @@
 [tox]
 minversion = 1.6
-envlist = docs,
+envlist = pep8,
 skipsdist = true
 
-[testenv:docs]
-basepython = python3
-deps = -r{toxinidir}/requirements-docs.txt
-commands =
-    sphinx-build -b html -n -d {envtmpdir}/doctrees ./ {toxinidir}/_build/html
-    echo "Generated docs available in {toxinidir}/_build/html"
-whitelist_externals =
-    echo
-    git
-    sh
+[flake8]
+ignore = E501,E722
+exclude =  ./venv-tox,./.tox,./venv
 
-[testenv:docs-linkcheck]
-basepython = python3
-#deps = -r{toxinidir}/requirements-docs.txt
-commands = echo "Link Checking not enforced"
-#commands = sphinx-build -b linkcheck -d {envtmpdir}/doctrees ./ {toxinidir}/_build/linkcheck
-whitelist_externals = echo
+[testenv:pep8]
+deps = flake8
+commands = flake8
