Add missing docs import
Change-Id: I425b007ff9b22b35f61bffbd931eb3ef778d6b10
Issue-ID: VFC-1804
Signed-off-by: dyh <dengyuanhong@chinamobile.com>

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ downloadcache = ~/cache/pip
 
 [flake8]
 ignore = E501,E722
-exclude = ./venv-tox,./.tox,./venv
+exclude = ./venv-tox,./.tox,./venv,./docs
 max-complexity = 27
 
 [testenv]
