--- a/requirements.txt
+++ b/requirements.txt
@@ -23,12 +23,12 @@ mock==3.0.5
 unittest_xml_reporting==1.12.0
 
 # for parser
-# cryptography==2.0.3
+cryptography==36.0.1
 # paramiko==2.0.2
 # nfv-toscaparser>=0.5.0
 
 # for swagger
-ruamel.yaml==0.16.10
+ruamel.yaml==0.17.1
 drf-yasg==1.17.0
 
 # for the validation feature
