fix doc config files and doc files + top-level tox.ini
Issue-ID: DOC-811

Signed-off-by: thmsdt <thomas.kulik@telekom.de>
Change-Id: I67dd9f27a851c4a12f078f28c4f9904959c42393

--- a/tox.ini
+++ b/tox.ini
@@ -22,6 +22,6 @@ commands = flake8
 commands =
   {[testenv]commands}
 
-[testenv:cov]
-deps = coverage==4.2
-commands = coverage xml --omit="*test_*,*__init__.py,*site-packages*"
+#[testenv:cov]
+#deps = coverage==4.2
+#commands = coverage xml --omit="*test_*,*__init__.py,*site-packages*"
