Modified project settings

--- a/project.config
+++ b/project.config
@@ -1,7 +1,10 @@
 [access]
 	inheritFrom = All-Projects
 [project]
-	description = NS lifecycle management
+	description = NS lifecycle management\n\nRead-only as per IT-26907
+	state = read only
 [access "refs/*"]
 	owner = group saml/onap-gerrit-vfc-nfvo-lcm-committers
 	read = group GitHub Replication
+[plugin "its-jira"]
+	enabled = true
