Modify access rules

--- a/project.config
+++ b/project.config
@@ -5,6 +5,6 @@
 	state = read only
 [access "refs/*"]
 	owner = group saml/onap-gerrit-vfc-nfvo-lcm-committers
-	read = group GitHub Replication
+	read = deny group GitHub Replication
 [plugin "its-jira"]
 	enabled = true
